Updated layout with compact dtu login button and different spacing. Fixed heading on sign-up page for social networks.

--- a/app/assets/stylesheets/dtu_design_elements.css.scss
+++ b/app/assets/stylesheets/dtu_design_elements.css.scss
@@ -33,3 +33,7 @@
 .dtu-large-spacing {
   margin-top: 40px;
 }
+
+.dtu-very-large-spacing {
+  margin-top: 60px;
+}
